--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,16 @@
     "private": true,
     "dependencies": {
         "axios": "^0.19.0",
+        "qrcode.react": "^1.0.0",
         "query-string": "^6.9.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-qr-reader": "^2.2.1",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.2.0",
         "semantic-ui-css": "^2.4.1",
-        "semantic-ui-react": "^0.88.1"
+        "semantic-ui-react": "^0.88.1",
+        "socket.io": "^2.3.0"
     },
     "scripts": {
         "start": "react-scripts start",
